assets/www/appcacheui.css
@charset 'UTF-8';

#appcache_info {
  position: absolute;
  position: fixed;
  top: -2em;
  left: 1em;
  right: 1em;
  font: 1em sans-serif;
  line-height: 1.8em;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  overflow: hidden;

  background-color: rgba(245, 245, 245, 0.9);
  color: #000;
  border: 1px solid #ccc;
  -webkit-box-shadow: 0 0 5px #e0e0e0;
  box-shadow: 0 0 5px #e0e0e0;
  border-top: none;

  padding: 0 0.5em;
  border-bottom-left-radius: 0.25em;
  border-bottom-right-radius: 0.25em;

  -webkit-transition: top 0.5s ease;
  -moz-transition: top 0.5s ease;
  -ms-transition: top 0.5s ease;
  -o-transition: top 0.5s ease;
  transition: top 0.5s ease;
  z-index: 99999;
}

#appcache_info a {
  display: none;
  float: right;
  font-weight: bold;
  text-decoration: none;
  color: #00f;
}

#appcache_info.appcache-progress:after {
  display: block;
  float: right;
  font-weight: bold;
  content: attr(data-progress);
}

#appcache_info.appcache-updateready a,
#appcache_info.appcache-obsolete a {
  display: block;
}

body.appcache-allinfo #appcache_info.appcache-checking,
#appcache_info.appcache-downloading,
#appcache_info.appcache-progress,
#appcache_info.appcache-updateready,
#appcache_info.appcache-obsolete {
  top: 0;
}

#appcache_info.appcache-updateready,
#appcache_info.appcache-obsolete {
  background-color: rgba(255, 245, 128, 0.9);
  font-weight: bold;
}

body.appcache-allinfo #appcache_info.appcache-noupdate,
body.appcache-allinfo #appcache_info.appcache-error,
#appcache_info.appcache-cached {
  top: -2em;

  -webkit-transition: top 0.5s ease 3s;
  -moz-transition: top 0.5s ease 3s;
  -ms-transition: top 0.5s ease 3s;
  -o-transition: top 0.5s ease 3s;
  transition: top 0.5s ease 3s;
}

/* English (default) strings */
#appcache_info a:before {
  content: 'Reload Now';
}
#appcache_info.appcache-checking:before {
  content: 'Checking for offline content updates ...'
}
#appcache_info.appcache-downloading:before,
#appcache_info.appcache-progress:before {
  content: 'Downloading offline content ...'
}
#appcache_info.appcache-updateready:before {
  content: 'A new version is available.';
}
#appcache_info.appcache-noupdate:before {
  content: 'No updates available for now.';
}
#appcache_info.appcache-obsolete:before {
  content: 'This website is obsolete. Reload to see new version.';
}
#appcache_info.appcache-error:before {
  content: 'Unable to check for offline content updates.';
}
#appcache_info.appcache-cached:before {
  content: 'Download complete. Ready to be accessed offline.';
}

/* zh-tw strings */
#appcache_info:lang(zh-tw) a:before {
  content: '立刻重新載入';
}
#appcache_info:lang(zh-tw).appcache-checking:before {
  content: '正在檢查網站離線內容更新 ...'
}
#appcache_info:lang(zh-tw).appcache-downloading:before,
#appcache_info:lang(zh-tw).appcache-progress:before {
  content: '正在下載網站離線內容 ...'
}
#appcache_info:lang(zh-tw).appcache-updateready:before {
  content: '最新版本已下載完畢。';
}
#appcache_info:lang(zh-tw).appcache-noupdate:before {
  content: '沒有新的離線內容更新。';
}
#appcache_info:lang(zh-tw).appcache-obsolete:before {
  content: '網站已過時。重新載入以存取最新網站。';
}
#appcache_info:lang(zh-tw).appcache-error:before {
  content: '無法檢查更新。';
}
#appcache_info:lang(zh-tw).appcache-cached:before {
  content: '下載完畢。網站可離線使用。';
}

/* zh-cn strings */
#appcache_info:lang(zh-cn) a:before {
  content: '立刻重新载入';
}
#appcache_info:lang(zh-cn).appcache-checking:before {
  content: '正在检查网站离线内容更新 ...'
}
#appcache_info:lang(zh-cn).appcache-downloading:before,
#appcache_info:lang(zh-cn).appcache-progress:before {
  content: '正在下载网站离线内容 ...'
}
#appcache_info:lang(zh-cn).appcache-updateready:before {
  content: '最新版本已下载完毕。';
}
#appcache_info:lang(zh-cn).appcache-noupdate:before {
  content: '没有新的离线内容更新。';
}
#appcache_info:lang(zh-cn).appcache-obsolete:before {
  content: '网站已过时。重新载入以存取最新网站。';
}
#appcache_info:lang(zh-cn).appcache-error:before {
  content: '无法检查更新。';
}
#appcache_info:lang(zh-cn).appcache-cached:before {
  content: '下载完毕。网站可离线使用。';
}

